# coralx

./: .cursorrules  .gitignore  .modalignore  COMPREHENSIVE_QUEUE_REFACTORING_PLAN.md  CORAL_X_ARCHITECTURE.md  CORAL_X_DYNAMIC_META_OPTIMIZATION.md  CORAL_X_HOW_IT_WORKS.md  CORAL_X_QUEUE_REFACTORING_PLAN.md  EMERGENT_BEHAVIOR_DETECTION_GUIDE.md  HOW_TO_ADD_MODELS_AND_DATASETS.md  LICENSE  README.md  SIMPLE_EMERGENT_TRACKING_GUIDE.md  TRAINING_EFFICIENCY_SUMMARY.md  TRAINING_STRATEGY_EVOLUTION.md  VERSION  analyze_cache_groups.py  coral_modal_app.py  coral_modal_app_optimized.py  coral_modal_benchmark_app.py  coral_queue_modal_app.py  coral_rich_dashboard.py  coral_status.py  coral_x_clean_config.yaml  coral_x_codellama_config.yaml  coral_x_codellama_config_benchmark.yaml  coral_x_emergent_config.yaml  coral_x_modal_config.yaml  coral_x_modal_config_optimized.yaml  coral_x_real_config.yaml  coral_x_scale_config.yaml  coral_x_test_config.yaml  coral_x_with_auto_benchmark_config.yaml  coralx  monitor_coral_evolution.py  mypy.ini  pyproject.toml  pytest.ini  quick_race_condition_test.py  quick_real_benchmark.py  (+26 more)
.github/workflows/: ci.yml
adapters/: __init__.py  quixbugs_real.py
archive/: __init__.py  coral_dashboard.py  coral_evolution_monitor.py
benchmarks/: __init__.py  benchmark_runner.py
cli/: coral.py  dashboard.py
config/: README.md  codellama_modal.yaml  coral_x_codellama_config.yaml  fakenews_gemma3n_colab_config.yaml  main.yaml  multimodal_hyperband_config.yaml  quick_test.yaml  test.yaml  tinyllama_local.yaml
config/examples/: baseline_grid.yaml  baseline_random.yaml  m1_tiny.yaml  multi_objective.yaml  quickstart.yaml  smoke.yaml
coral/: __init__.py
coral/application/: __init__.py  dashboard_orchestrator.py  evolution_engine.py  experiment_orchestrator.py
coral/config/: __init__.py  loader.py  path_utils.py
coral/domain/: adapter_config.py  ca.py  categorical_distribution.py  categorical_functors.py  categorical_result.py  cheap_knobs.py  codellama_generation.py  dashboard_state.py  dataset_constants.py  emergent_behavior.py  emergent_behavior_integration.py  experiment.py  feature_extraction.py  genetic_operations_tracker.py  genome.py  lora_training.py  mapping.py  neat.py  pareto_selection.py  quixbugs_evaluation.py  threshold_gate.py
coral/ports/: dashboard_interfaces.py  interfaces.py
coral_cache_local_backup/: cache_info.yaml
core/: __init__.py
core/application/: __init__.py  evolution_orchestrator.py  services.py
core/cli/: main.py
core/common/: config.py  config_loader.py  error_handler.py  exceptions.py  logging.py
core/domain/: __init__.py  adapter_config.py  ca.py  cheap_knobs.py  experiment.py  feature_extraction.py  fitness.py  genome.py  lora_training.py  mapping.py  neat.py  pareto_selection.py  threshold_gate.py
core/ports/: __init__.py  interfaces.py
core/services/: baseline_evaluator.py  genetic_operations.py  genetic_operations_tracker.py  (+6 more)
docs/: CATEGORICAL_DSL_IMPLEMENTATION_SUMMARY.md  CATEGORICAL_IMPROVEMENTS_SUMMARY.md  CATEGORICAL_STRUCTURES_IN_CORALX_EVOLUTION.md  COLAB_GEMMA3N_INTEGRATION_GUIDE.md  CORALX_CATEGORICAL_DSL_SPECIFICATION.md  CORALX_CODEBASE_CLEANUP_PLAN.md  CORALX_EVOLUTION_CATEGORICAL_DSL.md  DASHBOARD_USAGE.md  DEEP_CATEGORICAL_INTEGRATION_REPORT.md  ENHANCED_CORALCONFIG_ARCHITECTURE.md  EVOLUTION_DSL_SUMMARY.md  H1B.md  HYPERBAND_MULTI_FIDELITY_TRAINING.md  MODAL_COST_OPTIMIZATION_ANALYSIS.md  QUEUE_RACE_CONDITION_FIXES.md  QUEUE_SYSTEM_ARCHITECTURE.md  UNIFIED_CONFIG_ARCHITECTURE.md  architecture.md  extending.md  getting-started.md  technical-deep-dive.md
infra/: __init__.py  adapter_cache.py  modal_app.py  modal_executor.py  queue_modal_executor.py
plugins/: __init__.py
reporting/: __init__.py  report_generator.py
reports/: __init__.py  benchmark_report.py  evolution_reporter.py
scripts/: README_COLAB.md  colab_demo_only.py  colab_multimodal_ai_safety.py  colab_simple_runner.py  efficiency_test_multimodal.py  hyperband_demo.py  local_test_multimodal.py  monitor_evolution.py  run_coral_x_evolution.py  run_held_out_benchmark.py  run_realtime_benchmarks.py  test_modal_functions.py  test_queue_system.py
tests/: test_categorical_improvements.py  test_cli.py  test_config.py  test_evolution_loop.py  test_imports.py  test_m1.py
tools/: deploy_optimized_modal.py  deploy_phase1_optimization.py  real_inference_benchmark.py
wandb/: latest-run
(+55 files in other folders)
